--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "spotify-clone",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "https://floating-everglades-98369.herokuapp.com/",
   "dependencies": {
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.1",
